--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "System to manage appointments for covid-19",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
-    "prisma": "^3.12.0"
+    "prisma": "^3.12.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
