--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "desafiopitang",
+  "name": "prisma",
   "version": "1.0.0",
-  "description": "System to manage appointments for covid-19",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": "git+https://github.com/HurleySA/DesafioPitang.git",
-  "author": "Matheus Eduardo",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/HurleySA/DesafioPitang/issues"
+  "scripts": {
+    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
   },
-  "homepage": "https://github.com/HurleySA/DesafioPitang#readme",
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
-    "prisma": "^3.12.0",
-    "uuid": "^8.3.2"
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
-    "nodemon": "^2.0.15"
-  },
-  "type": "module"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.23",
+    "prisma": "^3.12.0"
+  }
 }
