--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "node --loader ts-node/esm ./src/server.ts"
+    "start": "node --loader ts-node/esm ./dist/server.js",
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
