--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node --loader ts-node/esm ./dist/server.js",
-    "build": "tsc"
+    "build": "tsc && yarn prisma migration:generate"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
