--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node --loader ts-node/esm ./dist/server.js",
-    "build": "tsc && yarn prisma migration:generate"
+    "build": "tsc && yarn prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
@@ -26,5 +26,8 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "prisma": "^3.12.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
