Trying to mock the database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=1234
       - POSTGRES_DB=prisma-postgres
+  database_test:
+    container_name: prisma-postgres-test
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=prisma
+      - POSTGRES_PASSWORD=prisma
+      - POSTGRES_DB=prisma-postgres-test
+    ports:
+      - "5433:5432"
