--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node --loader ts-node/esm ./dist/server.js",
     "build": "tsc && yarn prisma migrate deploy",
-    "test": "jest --detectOpenHandles"
+    "pretest": "docker-compose up -d database_test",
+    "test": "jest -i",
+    "posttest": "docker-compose stop database_test"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
@@ -18,6 +20,7 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "moment": "^2.29.2",
+    "pg": "^8.7.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3",
