Database mock to test implemented

--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,4 @@ POSTGRES_PASSWORD=prisma
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_DB=prisma-postgres-test
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+DATABASE_URL="postgresql://prisma:prisma@localhost:5433/prisma-postgres-test"
